# superbuild

./: .gitignore  CMakeGraphVizOptions.cmake.in  CMakeLists.txt  README  README.md  android-standalone-toolchain-10e.cmake  android-toolchain-ndk-18b.cmake  android-toolchain-ndk-r19c.cmake  android-toolchain-ndk-r21d.cmake  base-files-10.3.cmake  base-files-9.8.cmake  base-files-9.9.cmake  bison-3.7.2.cmake  bison-3.7.3+dfsg.cmake  bison-3.8.2+dfsg.cmake  boost-1.71.0.cmake  cmake-3.16.3.cmake  cmake-3.7.2.cmake  copyright  copyright.in  curl-7.52.1-1.cmake  curl-7.52.1-2.cmake  curl-7.52.1-3.cmake  curl-7.52.1-5+deb9u2.cmake  curl-7.52.1-5+deb9u4.cmake  curl-7.52.1-5.cmake  curl-7.64.0-2.cmake  curl-7.64.0-4.cmake  curl-7.64.0.cmake  curl-8.5.0.cmake  doxygen-1.8.12.cmake  doxygen-1.8.13.cmake  doxygen-1.8.20.cmake  expat-2.2.0-2+deb9u1.cmake  expat-2.2.0-2.cmake  expat-2.2.6-1.cmake  expat-2.2.6.cmake  expat-2.2.7.cmake  expat-2.2.9.cmake  expat-2.5.0.cmake  (+135 more)
ci/: azure-pipelines.yml  build-iwyu.yml  build.yml  filter-stderr.sed  msys2-shell.sh  num_jobs.cmake  publish.yml  setup-macos.yml  setup-msys2.yml  setup-ubuntu.yml  shell.sh  source.yml
mingw-w64-headers/: copyright
patches/: 0001-Add-CMakeLists.txt-for-downstream-builds.patch  0001-Allow-building-against-external-GTest-with-CMake.patch  0002-Use-GTest-1.8.1.patch  0002-tests-makefile-Improve-portability-of-using-head.patch  0003-Link-gtest-library-with-GTest-prefix.patch  0003-tests-makefile-Improve-portability-of-using-diff.patch  0004-Mark-the-external-GTest-package-as-required.patch  0005-Set-PROJ_LIB-when-running-tests.patch  0006-autoconf-cmake-build-test-only-if-needed.patch  Fix-Windows-mkspecs.patch  series
qtandroidextras/: copyright
qtbase/: copyright
qtbase-5.15-content-backport/patches/: 01-backport-android-content-engine  02-fix-file-dialog-for-tree  03-android-content-engine  series
qtbase/patches/: 0001-Revert-Android-Don-t-pause-when-in-multi-window-mode.patch  0001-Use-system-zlib-for-host-tools.patch  0025-force-using-make-on-msys.patch  QTBUG-4155-mingw-pkgconfig.patch  QTBUG-57299-QSaveFile-Windows-Dropbox.patch  QTBUG-63637-qmake-static-libs.patch  QTBUG-66123-Windows-mkspecs.patch  QTBUG-67545-qfontengine-coretext.patch  QTBUG-70631-Android-NDK-r18.patch  QTBUG-71946-mojave-fonts.patch  QTBUG-72078-qdockwindow.patch  QTBUG-72101-android-input.patch  QTBUG-80295-Qt5CoreMacros.cmake.patch  QTBUG-83916-qtooltip-crash.patch  QTBUG-86976-focus-changes.patch  QTBUG-87014-Big-Sur.patch  QTBUG-87803-android-29.patch  libjpeg-pkg-config.patch  series
qtimageformats/: copyright
qtimageformats/patches/: QTBUG-82412-TIFF-32bpc.patch  series
qtlocation/: copyright
qtlocation/patches/: 2017-10-24-android-positioning.patch  QTBUG-72291-horizontal-accuracy.patch  series
qtsensors/: copyright
qtserialport/: copyright
qtserialport/patches/: 2018-04-03-linux-polling.patch  series
qttools/: copyright
qttools/patches/: 0001-windeployqt-Fix-clang-warning-about-switch-statement.patch  0006-Make-windeployqt-cross-platform-again.patch  QTBUG-34525-assistant-resizing.patch  QTBUG-72174-assistant-readonly-fix.patch  series
qttranslations/: copyright
source/: README
